When a virtual server with slave DNS zones is disabled, then will be removed from slave servers to properly prevent DNS resolution of the domain. When it is re-enabled, the slave zones will be re-created.
Optimized the spam and virus deletion screen to deal better with large folders, by processing only 100 messages at a time.
Added a check to ensure that the Webalizer template configuration file actually exists.
Multiple virtual servers with SSL enabled can now share the same IP address. However, Virtualmin will display a warning message if a new domain does not match the hostname in the certificate for an existing domain.
UCC certificates and CSRs can now be created and displayed on the Manage SSL Certificate page.
Domain owners can now restore from files under their virtualmin-backup directory, subject to regular Unix permissions.
FTP directory restrictions can now be included in Virtualmin configuration backups.
Custom nameservers can now be defined for resellers, so that domains they create can appear to be hosted on a server separate from other resellers or the master admin.
The CPU time resource limit can now be entered in seconds, rather than minutes. However, this will be rounded down to the nearest minute when applied to SSH logins, due to the format of the /etc/security/limits.conf file.
Added a field to the Website Options page for setting the maximum run-time for PHP scripts.
If the post-modification or creation script for a domain fails, its output is now displayed as an error message.
Validation now checks that each domain's Unix user and group quotas match what Virtualmin expects.
Added a DNS template option to have a DNSSEC key generated for new domains, and records automatically signed.
Email sent to domain owners is now properly encoded so that non-ASCII characters can be included.
Added a checkbox to the Shared IP Addresses page to allocate a new shared IP, if allocation ranges have been defined.