@@ -57,6 +57,4 @@
 	- Use in DNS, Apache
 
  - Functional tests for SSL
-	- Script to allocate a shared IP address
 	- Test for regular sites on shared IP, SSL on shared IP
-	- CHANGELOG
